# nix-workshop

./: .travis.yml  LICENSE  PROGRAM.md  README.md  docker-run.sh  part-1-slides.md
00-introduction-to-nix/: run.sh
01-normal-haskell-development/: .gitignore  run.sh
01-using-nix-in-docker/: Dockerfile  README.md  run.bash
010-using-nix-in-docker/: Dockerfile  README.md
02-nix-based-development/: .gitignore  run.sh
03-finding-system-libraries/: .gitignore  nixpkgs-config.nix  run.sh
04-ghc-with-packages/: .gitignore  run.sh
05-registering-your-own-packages/: .gitignore  run.sh
nixtodo/: Makefile  README.md
nixtodo/hs-pkgs/nixtodo-api-client/src/Nixtodo/Api/: Client.hs
nixtodo/hs-pkgs/nixtodo-api/src/Nixtodo/: Api.hs
nixtodo/hs-pkgs/nixtodo-backend/: nixtodo-backend.cabal
nixtodo/hs-pkgs/nixtodo-backend/src/: nixtodo-backend.hs
nixtodo/hs-pkgs/nixtodo-backend/src/Nixtodo/Backend/: Db.hs  IndexTemplater.hs  WebServer.hs
nixtodo/hs-pkgs/nixtodo-backend/src/Nixtodo/Backend/Db/: Types.hs
nixtodo/hs-pkgs/nixtodo-frontend/: index.html.mustache  nixtodo-frontend.cabal  nixtodo-frontend.hs
nixtodo/modules/: base.nix  default.nix  hydra.nix  nixtodo-net-containerized.nix  nixtodo-net.nix
nixtodo/modules/backend/: db.nix  default.nix  server.nix
nixtodo/modules/nixtodo-net/: aws.nix  containerized.nix  default.nix
nixtodo/secrets/: dhparams.pem  postgresql-nixtodo-role-password  state.nixops
todo-app/: Makefile  nixpkgs.nix
todo-app/db/: create_or_update_db.sh  create_or_update_roles.sh
todo-app/db/migrations/: 000.sql
todo-app/hs-pkgs/todo-api/: shell.nix  todo-api.cabal
todo-app/hs-pkgs/todo-api-client/: shell.nix  todo-api-client.cabal
todo-app/hs-pkgs/todo-api-client/src/Todo/Api/: Client.hs
todo-app/hs-pkgs/todo-api/src/Todo/: Api.hs
todo-app/hs-pkgs/todo-backend/: shell.nix  todo-backend.cabal  todo-backend.hs
todo-app/hs-pkgs/todo-backend/src/: todo-backend.hs
todo-app/hs-pkgs/todo-backend/src/Todo/Backend/: Database.hs  Db.hs  IndexTemplater.hs  WebServer.hs
todo-app/hs-pkgs/todo-backend/src/Todo/Backend/Db/: Types.hs
todo-app/hs-pkgs/todo-frontend/: index.html  override.nix  shell.nix  todo-frontend.cabal  todo-frontend.hs
todo-app/modules/: base.nix  default.nix  todo-list-net.nix
todo-app/modules/backend/: db.nix  default.nix  server.nix
todo-app/nix/: haskell-overrides.nix  overlay.nix
todo-app/nix/haskell/servant/: default.nix
todo-app/nix/haskell/servant-client/: default.nix
todo-app/nix/haskell/servant-client-core/: default.nix
todo-app/nix/haskell/servant-client-ghcjs/: default.nix
todo-app/nix/haskell/servant-server/: default.nix
todo-app/secrets/: dhparams.pem  state.nixops
