name:                todo-backend
version:             0.1.0.0
synopsis:            TODO-list backend
homepage:            https://github.com/basvandijk/nix-workshop
license:             BSD3
author:              Bas van Dijk
maintainer:          v.dijk.bas@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable todo-backend
  main-is: todo-backend.hs
  build-depends:       base
                     , aeson
                     , containers
                     , lens
                     , servant
                     , servant-server
                     , text
                     , todo-api
                     , managed
                     , optparse-applicative
                     , configurator
                     , resource-pool
                     , postgresql-simple
                     , warp
                     , wai-extra
                     , data-default
  default-language:    Haskell2010
  hs-source-dirs: . src
  other-modules:
    Todo.Backend.Database
    Todo.Backend.WebServer
