name:                todo-backend
version:             0.1.0.0
synopsis:            TODO-list backend
homepage:            https://github.com/basvandijk/nix-workshop
license:             BSD3
author:              Bas van Dijk
maintainer:          v.dijk.bas@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable todo-backend
  main-is: todo-backend.hs
  build-depends:       SHA
                     , aeson
                     , base
                     , base16-bytestring
                     , bytestring
                     , containers
                     , configurator
                     , data-default
                     , directory
                     , filepath
                     , fsnotify
                     , hastache
                     , http-types
                     , lens
                     , managed
                     , opaleye
                     , optparse-applicative
                     , postgresql-simple
                     , product-profunctors
                     , resource-pool
                     , servant
                     , servant-server
                     , text
                     , tagged
                     , todo-api
                     , unix
                     , wai-extra
                     , wai-app-static
                     , wai-websockets
                     , websockets
                     , wai
                     , warp
                     , zlib
  default-language:    Haskell2010
  hs-source-dirs: src
  other-modules:
    Todo.Backend.Db
    Todo.Backend.Db.Types
    Todo.Backend.WebServer
    Todo.Backend.IndexTemplater
