name:                todo-frontend
version:             0.1.0.0
synopsis:            GHCJS TODO-list frontend web-app
homepage:            https://github.com/basvandijk/nix-workshop
license:             BSD3
author:              Bas van Dijk
maintainer:          v.dijk.bas@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable todo-frontend
  main-is:             todo-frontend.hs
  build-depends:       base
                     , containers
                     , miso
                     , aeson
                     , ghcjs-base
                     , lens
                     , mtl
                     , text
                     , transformers
                     , todo-api-client
                     , todo-api
                     , servant-client-ghcjs
                     , ghcjs-dom-jsffi
  default-language:    Haskell2010
